gap fixes and used classnames in productCard

--- a/src/components/ProductSlider/style.module.scss
+++ b/src/components/ProductSlider/style.module.scss
@@ -23,6 +23,6 @@
 
   .buttonsContainer {
     display: flex;
-    gap: 8px;
+    gap: 16px;
   }
 }
